--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,12 +8,12 @@
   "background_color": "#f0f3f6",
   "icons": [
     {
-      "src": "https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_192",
+      "src": "img/192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://oss.imcloudapp.com/discern_icon.png?x-oss-process=image/resize,w_512",
+      "src": "img/512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
